[package]
name = "foreman"
version = "0.3.2"
authors = ["Alex Burka <rust@alexburka.com>"]
description = "Rust build script assistant"
license = "MIT"

homepage = "https://github.com/durka/foreman"
repository = "https://github.com/durka/foreman"
documentation = "https://docs.rs/foreman"

categories = ["development-tools"]
keywords = ["cargo", "build", "environment"]

[badges]
travis-ci = { repository = "durka/foreman" }

[dependencies]
error-chain = "0.10"
strum = "0.6"
strum_macros = "0.6"
walkdir = "1.0"

