[package]
name = "foreman"
version = "0.5.0"
authors = ["Alex Burka <rust@alexburka.com>"]
description = "Rust build script assistant"
license = "MIT"

homepage = "https://github.com/durka/foreman"
repository = "https://github.com/durka/foreman"
documentation = "https://docs.rs/foreman"

categories = ["development-tools"]
keywords = ["cargo", "build", "environment"]

[badges]
travis-ci = { repository = "durka/foreman" }

[dependencies]
failure = { git = "https://github.com/withoutboats/failure" }
derive-fail = { git = "https://github.com/withoutboats/derive-fail" }
strum = "0.8"
strum_macros = "0.8"
walkdir = "1.0"

